// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AutoComplete/> Deveria renderizar na tela o componente Search com um Input 1`] = `
<div>
  <div
    class="sc-kvAqsT eAYqLr"
  >
    <input
      class="sc-grJzXs wpRIh"
      data-testid="id-search-characters"
      placeholder="Search..."
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`<AutoComplete/> Deveria renderizar um loading ao buscar 1`] = `
<div>
  <div
    class="sc-kvAqsT eAYqLr"
  >
    <input
      class="sc-grJzXs wpRIh"
      data-testid="id-search-characters"
      placeholder="Search..."
      type="text"
      value="test"
    />
  </div>
</div>
`;

exports[`<AutoComplete/> Deveria ser possível buscar 1`] = `
<div>
  <div
    class="sc-kvAqsT eAYqLr"
  >
    <input
      class="sc-grJzXs wpRIh"
      data-testid="id-search-characters"
      placeholder="Search..."
      type="text"
      value="test"
    />
  </div>
</div>
`;

exports[`<AutoComplete/> Deveria ser possível buscar de forma Debounce 1`] = `
<div>
  <div
    class="sc-kvAqsT eAYqLr"
  >
    <input
      class="sc-grJzXs wpRIh"
      data-testid="id-search-characters"
      placeholder="Search..."
      type="text"
      value="teste"
    />
  </div>
</div>
`;
